deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chp-api
  namespace: chp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: chp-api
  type: NodePort
